# RAG

./: .env  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  debug_query.py  embeddings.py  ingest.py  llm.py  qa.py  retriever.py  streamlit_app.py  style.css  vectorstore.py
app/data/faiss_index/Ayush_CV_/: index.faiss  index.pkl
data/faiss_index/Ayush_CV_ (1)_/: index.pkl
data/faiss_index/Ayush_CV__/: index.faiss  index.pkl
data/faiss_index/Ayush_Project_Synopsis_/: index.faiss  index.pkl
data/faiss_index/https_coeruniversity.ac.in__/: index.faiss  index.pkl
data/faiss_index/https_mspsharidwar.com__/: index.faiss  index.pkl
data/test_index/: index.faiss  index.pkl
