[project]
name = "rag-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.13.0",
    "groq>=0.36.0",
    "gunicorn>=23.0.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "pdfminer-six>=20251107",
    "playwright>=1.56.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
